<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 英語のみ-->
    <string name="record_path">SavedRecord.txt</string>

    <!-- 共通-->
    <string name="start_measurement">Start</string>
    <string name="done">Done</string>
    <string name="warning">Warning</string>
    <string name="confirm">Confirmation</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>


    <!-- アクティビティタイトル-->
    <string name="app_name">Mood Recorder</string>
    <string name="title_activity_otameshi">Otameshi</string>
    <string name="title_activity_measurement_instruction">Measurement Instruction</string>
    <string name="title_activity_browsing_history">History</string>
    <string name="title_activity_result">Results</string>
    <string name="title_activity_measurement">Measurement</string>
    <string name="title_activity_preferences_app">Preferences</string>

    <!-- トップ画面-->
    <string name="minute">Min.</string>
    <string name="second">Sec.</string>
    <string name="set_appropriate_time">Please set appropriate time.</string>
    <string name="measuring_time">Measuring Time</string>

    <!-- 設定画面-->
    <string name="title_pref_is_tracked">Draw Tracking</string>
    <string name="summary_pref_is_tracked">Draw a track while measurements.</string>
    <string name="title_pref_sampling_rate">Sampling Rate (Hz)</string>
    <string name="summary_pref_sampling_rate">Choose the following rates.(Hz)</string>

    <!-- 測定画面-->
    <string name="comfortable">Comfortable</string>
    <string name="uncomfortable">Uncomfortable</string>
    <string name="obscure">Obscure</string>
    <string name="clear">Clear</string>
    <string name="question_save">Do you save the result?</string>
    <string name="discard">Discard</string>
    <string name="saving">Saving...</string>
    <string name="saved">The result has been saved.</string>

    <!-- 測定インストラクション画面-->
    <string name="instruction_top">Locate your mood.\nObserve the change of your mood and record it.</string>
    <string name="instruction_bottom">DO NOT release your finger from the display.\nAfter press "Start" button, the measurement will begin in 3 secs.</string>

    <!-- 履歴閲覧画面-->
    <string name="no_data">NO DATA</string>
    <string name="with_track">With Track</string>
    <string name="without_track">Without Track</string>
    <string name="execute_delete">Delete</string>
    <string name="choose_delete">Delete Selected</string>
    <string name="warning_message">No items are chosen.</string>
    <string name="delete_confirmation1">Are you sure deleting</string>
    <string name="delete_confirmation2">chosen item(s)?</string>

    <!-- 結果画面-->
    <string name="abscissa_convergence">Abs. of Comv.</string>
    <string name="x_value">X Value</string>
    <string name="y_value">Y Value</string>
    <string name="cannot_go_back">Sorry, you cannot go back.</string>

</resources>