<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.tubesoft.moodrecorder.MeasurementActivity"
    tools:showIn="@layout/activity_measurement">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/xy_plane"
        android:layout_centerVertical="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="POSITION"
        android:id="@+id/position"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/comfortable"
        android:id="@+id/textView5"
        android:layout_above="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/uncomfortable"
        android:id="@+id/textView6"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/obscure"
        android:id="@+id/textView7"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/textView5"
        android:layout_toStartOf="@+id/textView5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/clear"
        android:id="@+id/textView8"
        android:layout_alignTop="@+id/textView7"
        android:layout_toRightOf="@+id/textView6"
        android:layout_toEndOf="@+id/textView6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textCountdown"
        android:textSize="150sp"
        android:gravity="center"
        android:layout_below="@+id/position"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textColor="#296bde" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TIME"
        android:id="@+id/textViewTime"
        android:layout_toRightOf="@+id/textView5"
        android:layout_alignTop="@+id/position"
        android:layout_alignRight="@+id/imageView"
        android:layout_alignEnd="@+id/imageView"
        android:gravity="right" />

</RelativeLayout>
