<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.tubesoft.moodrecorder.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ハローワールド\nこれで環境は整ったかと思います！\n頑張っていきましょう！！"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="次へ"
        android:id="@+id/btnToOtameshi"
        android:onClick="onClick"
        android:nestedScrollingEnabled="true"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/btnMeasurement"
        android:layout_alignStart="@+id/btnMeasurement" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_browsing_history"
        android:id="@+id/btnHistory"
        android:onClick="onClick"
        android:layout_marginTop="111dp"
        android:layout_below="@+id/numPickerSec"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_measurement"
        android:id="@+id/btnMeasurement"
        android:onClick="onClick"
        android:layout_alignBottom="@+id/numPickerSec"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second"
        android:id="@+id/textView3"
        android:layout_alignTop="@+id/btnMeasurement"
        android:layout_toRightOf="@+id/numPickerSec"
        android:layout_toEndOf="@+id/numPickerSec" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minute"
        android:id="@+id/textView4"
        android:layout_alignTop="@+id/textView3"
        android:layout_toRightOf="@+id/numPickerMin"
        android:layout_toEndOf="@+id/numPickerMin" />

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:id="@+id/numPickerMin"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/numPickerSec"
        android:layout_alignTop="@+id/numPickerSec" />

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:id="@+id/numPickerSec"
        android:layout_marginTop="64dp"
        android:layout_below="@+id/btnToOtameshi"
        android:layout_toRightOf="@+id/textView4"
        android:layout_toEndOf="@+id/textView4" />

</RelativeLayout>
